# bsz

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  bsz.service  compose.yml  docker-compose.yml  nginx.conf.example  screenshot.avif
.claude/: launch.json
.github/workflows/: build-release.yaml  check.yml  ci.yaml  docker-push.yaml  release.yml
backend/: Cargo.toml  README.md
backend/example/: .env  bsz.service  nginx-all-in-one.conf  nginx.conf
backend/src/: config.rs  main.rs  state.rs
backend/src/api/: handlers.rs
backend/src/core/: count.rs
backend/src/middleware/: admin_auth.rs  identity.rs  mod.rs
example/: nginx.conf
frontend/: .gitignore  README.md  app.config.ts  biome.json  eslint.config.js  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/scripts/: install-ui.ts  postbuild.ts
frontend/src/: app.css  app.tsx  entry-server.tsx
frontend/src/components/admin/: Dashboard.tsx  ImportDialog.tsx  Login.tsx  LogsDialog.tsx  Modal.tsx  PagesDialog.tsx
frontend/src/components/app-shell/: CommandPalette.tsx  Sidebar.tsx  TopBar.tsx  UndoToast.tsx
frontend/src/components/ui/: alert-dialog.tsx  button.tsx  card.tsx  charts.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  separator.tsx  sheet.tsx  skeleton.tsx  switch.tsx  table.tsx  tabs.tsx  text-field.tsx  toast.tsx  tooltip.tsx
frontend/src/lib/: api.ts  auth.ts  config.ts  connections.ts  i18n.ts  theme.ts  undo.ts
frontend/src/routes/: admin.tsx  index.tsx  welcome.tsx
frontend/src/routes/app/: logs.tsx  overview.tsx  settings.tsx
frontend/src/routes/app/sites/: [siteKey].tsx  index.tsx
src/: config.rs  main.rs  state.rs  static_files.rs
src/api/: admin.rs  handlers.rs  mod.rs
src/api/admin/: import.rs  keys.rs  logs.rs  mod.rs  pages.rs  stats.rs  sync.rs
src/core/: count.rs
src/middleware/: admin_auth.rs  identity.rs  mod.rs
static/: admin.html  index.html  llms.txt  robots.txt  sitemap.xml
