[package]
name = "busuanzi-rs"
version = "0.1.0"
edition = "2021"
description = "Self-hosted busuanzi visitor statistics - zero dependency version"
repository = "https://github.com/AdingApkgg/bsz"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full", "fs", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
md5 = "0.7"
sha1 = "0.10"
hex = "0.4"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
url = "2.5"
rust-embed = "8.2"
mime_guess = "2.0"
dashmap = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
roxmltree = "0.20"
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
urlencoding = "2.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
