[package]
name = "busuanzi-rs"
version = "0.1.0"
edition = "2021"
description = "Self-hosted busuanzi visitor statistics - zero dependency version"
repository = "https://github.com/AdingApkgg/bsz"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
md5 = "0.8"
sha1 = "0.10"
hex = "0.4"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1"
url = "2"
rust-embed = "8"
mime_guess = "2"
dashmap = "6"
rusqlite = { version = "0.38", features = ["bundled"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
roxmltree = "0.21"
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
urlencoding = "2"
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
